# ClickCube

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
back/: .gitignore  Cargo.toml  Dockerfile
back/src/: main.rs  side.rs
back/src/api/: click.rs  cube.rs  handmade.rs  mod.rs  paint.rs  painter.rs
back/src/clients/: click.rs  cube.rs  handmade.rs  mod.rs  paint.rs  painter.rs
back/src/controllers/: click.rs  cube.rs  handmade.rs  mod.rs  paint.rs  painter.rs
back/src/cube/: cube.rs  mod.rs
back/src/cube/side/: mod.rs  side.rs
back/src/modules/: adapter.rs  click.rs  color_adapter.rs  cube.rs  cube_face.rs  face.rs  handmade.rs  mod.rs  opticourier.rs  paint.rs  painter.rs
back/src/schemas/: file_upload.rs  mod.rs  response.rs  turn_cube_face_content.rs  update_colors_content.rs  upload_colors.rs  upload_files.rs  upload_files_content.rs  upload_images_content.rs
front/: Dockerfile  package-lock.json  package.json
front/public/: index.html
front/src/: App.css  App.js
front/src/components/: ChaosModeCube.js  Notification.css  Notification.js  RubicsCube.css  RubicsCube.js
