[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
axum-extra = { version = "0.10.0", features = ["multipart"] }
image = "0.25.5"
