[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
serde = { version = "1.0.218", features = ["derive"] }
image = "0.25.5"
